<resources>
    <string name="app_name">小微趣钱</string>
    <string name="home_tv1">放款快</string>
    <string name="home_tv2">利息低</string>
    <string name="sort_tv">额度高低</string>
    <string name="home_tv4">筛选</string>
    <string name="loan_money">贷款金额</string>
    <string name="loan_term">贷款期限</string>
    <string name="mine">个人中心</string>
    <string name="precision_label">精准标签</string>
    <string name="sort_di">从高到低</string>
    <string name="sort_gao">从低到高</string>
    <string name="home_title1">er</string>
    <string name="done">重新获取</string>
    <string name="skip">跳过</string>
    <string name="applynow">立即申请</string>
    <string name="agreement">已阅读并同意《小微趣钱服务条款》</string>
    <string name="tv_not_readandagree">尚未阅读或同意服务条》</string>
    <string name="bill">账单详情</string>
    <string name="about_us">关于我们</string>
    <string name="contact_us">联系我们</string>
    <string name="exit_login">退出登录</string>
    <string name="version">版本号</string>
    <string name="guanzhu">关注小微趣钱</string>
    <string name="phonenum">4006-490390</string>
    <string name="notifyTitle">提示</string>
    <string name="location">定位</string>
    <string name="notifyMsg">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting">设置</string>
    <string name="cancel">取消</string>
    <string name="feedback_hint">您的宝贵意见和建议将帮助我们更改的改进产品</string>
    <string name="tv_feedback">意见反馈</string>
    <string name="tv_help">帮助中心</string>
    <string name="details_item_title">办理流程</string>
    <string name="details_item_title2"> 申请条件</string>
    <string name="details_item_title3">所需材料</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="bill_money_tv">贷款金额(元)</string>
    <string name="bill_details_money_tv">待还金额(元)</string>
    <string name="bill_title">借款账单</string>
    <string name="details_item_tv1">台当局领导人蔡英文日前和所谓“友邦”总统见面，但过程中发生插曲，台“外交部”一名特约摄影师在蔡办外晕倒</string>
    <string name="large_text">第一品 法会因由分

如是我闻，一时，佛在舍卫国祗树给孤独园，与大比丘众千二百五十人俱。尔时，世尊食时，著衣持钵，

入舍卫大城乞食。于其城中，次第乞已，还至本处。饭食讫，收衣钵，洗足已，敷座而坐。

　

第二品 善现启请分

时，长老须菩提在大众中即从座起，偏袒右肩，右膝着地，合掌恭敬而白佛言：“希有！世尊！如来善护念

诸菩萨，善付嘱诸菩萨。世尊！善男子、善女人，发阿耨多罗三藐三菩提心，应云何住，云何降伏其心？

”佛言：“善哉，善哉。须菩提！如汝所说，如来善护念诸菩萨，善付嘱诸菩萨。汝今谛听！当为汝说：善

男子、善女人，发阿耨多罗三藐三菩提心，应如是住，如是降伏其心。”“唯然，世尊！愿乐欲闻。”

　

第三品 大乘正宗分

佛告须菩提：“诸菩萨摩诃萨应如是降伏其心！所有一切众生之类：若卵生、若胎生、若湿生、若化生；若

有色、若无色；若有想、若无想、若非有想非无想，我皆令入无余涅盘而灭度之。如是灭度无量无数无边

众生，实无众生得灭度者。何以故？须菩提！若菩萨有我相、人相、众生相、寿者相，即非菩萨。”

　

第四品 妙行无住分

“复次，须菩提！菩萨于法，应无所住，行于布施，所谓不住色布施，不住声香味触法布施。须菩提！菩萨

应如是布施，不住于相。何以故？若菩萨不住相布施，其福德不可思量。须菩提！于意云何？东方虚空可

思量不？”“不也，世尊！”“须菩提！南西北方四维上下虚空可思量不？”“不也，世尊！”“须菩提！菩萨无住

相布施，福德亦复如是不可思量。须菩提！菩萨但应如所教住。”

　

第五品 如理实见分

“须菩提！于意云何？可以身相见如来不？”“不也，世尊！不可以身相得见如来。何以故？如来所说身相，

即非身相。”佛告须菩提：“凡所有相，皆是虚妄。若见诸相非相，则见如来。”

　

第六品 正信希有分

须菩提白佛言：“世尊！颇有众生，得闻如是言说章句，生实信不？”佛告须菩提：“莫作是说。如来灭后，

后五百岁，有持戒修福者，于此章句能生信心，以此为实，当知是人不于一佛二佛三四五佛而种善根，已

于无量千万佛所种诸善根，闻是章句，乃至一念生净信者，须菩提！如来悉知悉见，是诸众生得如是无量

福德。何以故？是诸众生无复我相、人相、众生相、寿者相；无法相，亦无非法相。何以故？是诸众生若

心取相，则为著我人众生寿者。若取法相，即著我人众生寿者。何以故？若取非法相，即著我人众生寿者

，是故不应取法，不应取非法。以是义故，如来常说：‘汝等比丘，知我说法，如筏喻者；法尚应舍，何况

非法。’”

　

第七品 无得无说分

“须菩提！于意云何？如来得阿耨多罗三藐三菩提耶？如来有所说法耶？”须菩提言：“如我解佛所说义，无

有定法名阿耨多罗三藐三菩提，亦无有定法，如来可说。何以故？如来所说法，皆不可取、不可说、非法

、非非法。所以者何？一切圣贤，皆以无为法而有差别。”

　

第八品 依法出生分

“须菩提！于意云何？若人满三千大千世界七宝以用布施，是人所得福德，宁为多不？”须菩提言：“甚多，

世尊！何以故？是福德即非福德性，是故如来说福德多。”“若复有人，于此经中受持，乃至四句偈等，为

他人说，其福胜彼。何以故？须菩提！一切诸佛，及诸佛阿耨多罗三藐三菩提法，皆从此经出。须菩提！

所谓佛法者，即非佛法。”

　

第九品 一相无相分

“须菩提！于意云何？须陀洹能作是念：‘我得须陀洹果’不？”须菩提言：“不也，世尊！何以故？须陀洹名

为入流，而无所入，不入色声香味触法，是名须陀洹。”“须菩提！于意云何？斯陀含能作是念：‘我得斯陀

含果’不？”须菩提言：不也，世尊！何以故？斯陀含名一往来，而实无往来，是名斯陀含。”“须菩提！于

意云何？阿那含能作是念：‘我得阿那含果’不？”须菩提言：“不也，世尊！何以故？阿那含名为不来，而实

无不来，是故名阿那含。”“须菩提！于意云何？阿罗汉能作是念，‘我得阿罗汉道’不？”须菩提言：“不也，

世尊！何以故？实无有法名阿罗汉。世尊！若阿罗汉作是念：‘我得阿罗汉道’，即为著我人众生寿者。世

尊！佛说我得无诤三昧，人中最为第一，是第一离欲阿罗汉。世尊，我不作是念：‘我是离欲阿罗汉’。世

尊！我若作是念：‘我得阿罗汉道’，世尊则不说须菩提是乐阿兰那行者！以须菩提实无所行，而名须菩提

是乐阿兰那行。

　

第十品 庄严净土分

佛告须菩提：“于意云何？如来昔在然灯佛所，于法有所得不？”“不也，世尊！如来在然灯佛所，于法实无

所得。”“须菩提！于意云何？菩萨庄严佛土不？”“不也，世尊！何以故？庄严佛土者，则非庄严，是名庄

严。”“是故须菩提！诸菩萨摩诃萨应如是生清净心，不应住色生心，不应住声香味触法生心，应无所住而

生其心。须菩提！譬如有人，身如须弥山王，于意云何？是身为大不？”须菩提言：“甚大，世尊！何以故

？佛说非身，是名大身。”

　

第十一品 无为福胜分

“须菩提！如恒河中所有沙数，如是沙等恒河，于意云何？是诸恒河沙宁为多不？”须菩提言：“甚多，世尊

！但诸恒河尚多无数，何况其沙。”“须菩提！我今实言告汝：若有善男子、善女人，以七宝满尔所恒河沙

数三千大千世界，以用布施，得福多不？”须菩提言：“甚多，世尊！”佛告须菩提：“若善男子、善女人，

于此经中，乃至受持四句偈等，为他人说，而此福德胜前福德。”

　

第十二品 尊重正教分

“复次，须菩提！随说是经，乃至四句偈等，当知此处，一切世间、天人、阿修罗，皆应供养，如佛塔庙，

何况有人尽能受持读诵。须菩提！当知是人成就最上第一希有之法，若是经典所在之处，则为有佛，若尊

重弟子。”

　

第十三品 如法受持分

尔时，须菩提白佛言：“世尊！当何名此经，我等云何奉持？”佛告须菩提：“是经名为《金刚般若波罗蜜》

，以是名字，汝当奉持。所以者何？须菩提！佛说般若波罗蜜，即非般若波罗蜜，是名般若波罗蜜。须菩

提！于意云何？如来有所说法不？”须菩提白佛言：“世尊！如来无所说。”“须菩提！于意云何？三千大千

世界所有微尘是为多不？”须菩提言：“甚多，世尊！”“须菩提！诸微尘，如来说非微尘，是名微尘。如来

说：世界，非世界，是名世界。须菩提！于意云何？可以三十二相见如来不？”“不也，世尊！不可以三十

二相得见如来。何以故？如来说：三十二相，即是非相，是名三十二相。”“须菩提！若有善男子、善女人

，以恒河沙等身命布施；若复有人，于此经中，乃至受持四句偈等，为他人说，其福甚多。”

　

第十四品 离相寂灭分

尔时，须菩提闻说是经，深解义趣，涕泪悲泣，而白佛言：“希有，世尊！佛说如是甚深经典，我从昔来所

得慧眼，未曾得闻如是之经。世尊！若复有人得闻是经，信心清净，则生实相，当知是人，成就第一希有

功德。世尊！是实相者，即是非相，是故如来说名实相。世尊！我今得闻如是经典，信解受持不足为难，

若当来世，后五百岁，其有众生，得闻是经，信解受持，是人则为第一希有。


何以故？此人无我相、无人相、无众生相、无寿者相。所以者何？我相即是非相，人相、众生、相寿者相

即是非相。何以故？离一切诸相，则名诸佛。”佛告须菩提：“如是！如是！若复有人得闻是经，不惊、不

怖、不畏，当知是人甚为希有。何以故？须菩提！如来说第一波罗蜜，非第一波罗蜜，是名第一波罗蜜。

须菩提！忍辱波罗蜜，如来说非忍辱波罗蜜，是名忍辱波罗蜜。何以故？须菩提！如我昔为歌利王割截身

体，我于尔时，无我相、无人相、无众生相、无寿者相。何以故？


我于往昔节节支解时，若有我相、人相、众生相、寿者相，应生嗔恨。须菩提！又念过去于五百世作忍辱

仙人，于尔所世，无我相、无人相、无众生相、无寿者相。是故须菩提！菩萨应离一切相，发阿耨多罗三

藐三菩提心，不应住色生心，不应住声香味触法生心，应生无所住心。若心有住，则为非住。是故佛说：

‘菩萨心不应住色布施。’须菩提！菩萨为利益一切众生，应如是布施。如来说：一切诸相，即是非相。又说

：一切众生，即非众生。须菩提！如来是真语者、实语者、如语者、不诳语者、不异语者。须菩提！如来

所得法，此法无实无虚。须菩萨，若菩萨心住于法而行布施，如人入暗，则无所见。若菩萨心不住法而行

布施，如人有目，日光明照，见种种色。须菩提！当来之世，若有善男子、善女人，能于此经受持读诵，

则为如来以佛智慧，悉知是人，悉见是人，皆得成就无量无边功德。”

　

第十五品 持经功德分

“须菩提！若有善男子、善女人，初日分以恒河沙等身布施，中日分复以恒河沙等身布施，后日分亦以恒河

沙等身布施，如是无量百千万亿劫以身布施；若复有人，闻此经典，信心不逆，其福胜彼，何况书写、受

持、读诵、为人解说。须菩提！以要言之，是经有不可思议、不可称量、无边功德。如来为发大乘者说，

为发最上乘者说。若有人能受持读诵，广为人说，如来悉知是人，悉见是人，皆得成就不可量、不可称、

无有边、不可思议功德。如是人等，则为荷担如来阿耨多罗三藐三菩提。


何以故？须菩提！若乐小法者，著我见、人见、众生见、寿者见，则于此经，不能听受读诵、为人解说。

须菩提！在在处处，若有此经，一切世间、天、人、阿修罗，所应供养；当知此处则为是塔，皆应恭敬，

作礼围绕，以诸华香而散其处。”

　

第十六品 能净业障分

“复次，须菩提！若善男子、善女人，受持读诵此经，若为人轻贱，是人先世罪业，应堕恶道，以今世人轻

贱故，先世罪业则为消灭，当得阿耨多罗三藐三菩提。”“须菩提！我念过去无量阿僧祗劫，于然灯佛前，

得值八百四千万亿那由他诸佛，悉皆供养承事，无空过者，若复有人， 于后末世，能受持读诵此经，所得

功德，于我所供养诸佛功德，百分不及一，千万亿分、乃至算数譬喻所不能及。须菩提！若善男子、善女

人，于后末世，有受持读诵此经，所得功德，我若具说者，或有人闻，心则狂乱，狐疑不信。须菩提！当

知是经义不可思议，果报亦不可思议。”

　

第十七品 究竟无我分

尔时，须菩提白佛言：“世尊！善男子、善女人，发阿耨多罗三藐三菩提心，云何应住？云何降伏其心？

”佛告须菩提：“善男子、善女人，发阿耨多罗三藐三菩提心者，当生如是心，我应灭度一切众生。灭度一

切众生已，而无有一众生实灭度者。


何以故？须菩提！若菩萨有我相、人相、众生相、寿者相，则非菩萨。


所以者何？须菩提！实无有法发阿耨多罗三藐三菩提心者。”“须菩提！于意云何？如来于然灯佛所，有法

得阿耨多罗三藐三菩提不？”“不也，世尊！如我解佛所说义，佛于然灯佛所，无有法得阿耨多罗三藐三菩

提。”佛言：“如是！如是！须菩提！实无有法如来得阿耨多罗三藐三菩提。须菩提！若有法如来得阿耨多

罗三藐三菩提者，然灯佛则不与我授记：汝于来世，当得作佛，号释迦牟尼。以实无有法得阿耨多罗三藐

三菩提，是故然灯佛与我授记，作是言：‘汝于来世，当得作佛，号释迦牟尼。’


何以故？如来者，即诸法如义。若有人言：‘如来得阿耨多罗三藐三菩提’。须菩提！实无有法，佛得阿耨多

罗三藐三菩提。须菩提！如来所得阿耨多罗三藐三菩提，于是中无实无虚。是故如来说：一切法皆是佛法

。须菩提！所言一切法者，即非一切法，是故名一切法。须菩提！譬如人身长大。”须菩提言：“世尊！如

来说：人身长大，则为非大身，是名大身。”“须菩提！菩萨亦如是。若作是言：‘我当灭度无量众生’，则不

名菩萨。


何以故？须菩提！实无有法名为菩萨。是故佛说：一切法无我、无人、无众生、无寿者。须菩提！若菩萨

作是言，‘我当庄严佛土’，是不名菩萨。


何以故？如来说：庄严佛土者，即非庄严，是名庄严。须菩提！若菩萨通达无我法者，如来说名真是菩

萨。

　

第十八品 一体同观分

“须菩提！于意云何？如来有肉眼不？”


“如是，世尊！如来有肉眼。”


“须菩提！于意云何？如来有天眼不？”


“如是，世尊！如来有天眼。”


“须菩提！于意云何？如来有慧眼不？”


“如是，世尊！如来有慧眼。”


“须菩提！于意云何？如来有法眼不？”


“如是，世尊！如来有法眼。”


“须菩提！于意云何？如来有佛眼不？”


“如是，世尊！如来有佛眼。”


“须菩提！于意云何？如恒河中所有沙，佛说是沙不？”


“如是，世尊！如来说是沙。”


“须菩提！于意云何？如一恒河中所有沙，有如是等恒河，是诸恒河所有沙数，佛世界如是，宁为多不？

”“甚多，世尊！”佛告须菩提：“尔所国土中，所有众生，若干种心，如来悉知。何以故？如来说：诸心皆

为非心，是名为心。所以者何？须菩提！过去心不可得，现在心不可得，未来心不可得。”

　

第十九品 法界通分分

“须菩提！于意云何？若有人满三千大千世界七宝以用布施，是人以是因缘，得福多不？”“如是，世尊！此

人以是因缘，得福甚多。”“须菩提！若福德有实，如来不说得福德多；以福德无故，如来说得福德多。”

　

第二十品 离色离相分

“须菩提！于意云何？佛可以具足色身见不？”“不也，世尊！如来不应以具足色身见。何以故？如来说：具

足色身，即非具足色身，是名具足色身。”“须菩提！于意云何？如来可以具足诸相见不？”“不也，世尊！

如来不应以具足诸相见。何以故？如来说：诸相具足，即非具足，是名诸相具足。”</string>
</resources>
