<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    >
<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/bg_personal"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"

            >

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/title_hight"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">

                <com.example.blibrary.ImageView.CircleImageView
                    android:id="@+id/photo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:src="@mipmap/icon_photo"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/photo" />
            </android.support.constraint.ConstraintLayout>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_hight"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_hight">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/home_margin"
                        android:src="@mipmap/back"

                        />

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/mine"
                        android:textColor="#fff"
                        android:textSize="@dimen/title_size" />

                    <ImageView
                        android:id="@+id/news"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/home_margin"
                        android:src="@mipmap/icon_personal_news"

                        />
                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/bill_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ll_selector"
                android:padding="@dimen/personal_item_padding"


                >

                <ImageView
                    android:id="@+id/bill_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"

                    android:src="@mipmap/icon_about" />

                <TextView
                    android:id="@+id/bill_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/home_margin"
                    android:layout_toRightOf="@+id/bill_icon"
                    android:text="@string/bill"
                    android:textColor="@color/black_homne_tv"
                    android:textSize="@dimen/text_security" />

                <ImageView
                    android:id="@+id/bill_go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/go"

                    />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/about_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ll_selector"
                android:padding="@dimen/personal_item_padding"


                >

                <ImageView
                    android:id="@+id/about_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"

                    android:src="@mipmap/icon_about" />

                <TextView
                    android:id="@+id/about_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/home_margin"
                    android:layout_toRightOf="@+id/about_icon"
                    android:text="@string/about_us"
                    android:textColor="@color/black_homne_tv"
                    android:textSize="@dimen/text_security" />

                <ImageView
                    android:id="@+id/about_go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/go"

                    />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/contact_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/ll_selector"
                android:padding="@dimen/personal_item_padding"


                >

                <ImageView
                    android:id="@+id/contact_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"

                    android:src="@mipmap/icon_contact" />

                <TextView
                    android:id="@+id/contact_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/home_margin"
                    android:layout_toRightOf="@+id/contact_icon"
                    android:text="@string/contact_us"
                    android:textColor="@color/black_homne_tv"

                    android:textSize="@dimen/text_security" />

                <ImageView
                    android:id="@+id/contact_go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/go"

                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/feed_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/ll_selector"
                android:padding="@dimen/personal_item_padding"


                >

                <ImageView
                    android:id="@+id/feed_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"

                    android:src="@mipmap/icon_feedback" />

                <TextView
                    android:id="@+id/feed_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/home_margin"
                    android:layout_toRightOf="@+id/feed_icon"
                    android:text="@string/tv_feedback"
                    android:textColor="@color/black_homne_tv"

                    android:textSize="@dimen/text_security" />

                <ImageView
                    android:id="@+id/feed_go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/go"

                    />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/help_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@drawable/ll_selector"
                android:padding="@dimen/personal_item_padding"


                >

                <ImageView
                    android:id="@+id/help_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"

                    android:src="@mipmap/icon_helpcentre" />

                <TextView
                    android:id="@+id/help_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/home_margin"
                    android:layout_toRightOf="@+id/help_icon"
                    android:text="@string/tv_help"
                    android:textColor="@color/black_homne_tv"

                    android:textSize="@dimen/text_security" />

                <ImageView
                    android:id="@+id/help_go"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/go"

                    />

            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/version_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/personal_margin_top"
                android:background="@drawable/ll_selector"
                android:padding="@dimen/personal_item_padding"


                >

                <ImageView
                    android:id="@+id/version_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"

                    android:src="@mipmap/icon_guanzhu" />

                <TextView
                    android:id="@+id/version_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/home_margin"
                    android:layout_toRightOf="@+id/version_icon"
                    android:text="@string/guanzhu"
                    android:textColor="@color/black_homne_tv"
                    android:textSize="@dimen/text_security" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/go"
                    />


                    />

            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin"
        android:layout_marginTop="@dimen/login_margin"
        android:layout_marginRight="@dimen/login_margin"
        android:background="@drawable/shape_rectangle_solid_blue"
        android:gravity="center"
        android:padding="5dp"
        android:text="退出登录"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"


        />

</android.support.constraint.ConstraintLayout>

